--- a/Assignments/02-time/sketch/stylesheet.css
+++ b/Assignments/02-time/sketch/stylesheet.css
@@ -1,9 +1,13 @@
 #canvas {
+    top: 25%;
+    right: 25%;
     position:absolute;
     z-index: 1;
 }
 
 #video {
+    top: 25%;
+    right: 25%;
     position: absolute;
     z-index: 0;
 
